--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,9 +3,59 @@ Le style générique de note application
 */
 
 body {
-    background-color: #e0e0e0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Avenir Next", sans-serif;
+    font-size: 14px;
 }
 
 h1.title {
     color: white;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="file"],
+input[type="image"],
+input[type="tel"],
+input[type="search"],
+input[type="week"],
+input[type="month"],
+input[type="url"],
+select,
+textarea {
+    height: 20px;
+    font-size: 14px;
+    border-radius: 2px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    margin: 4px 0;
+    text-indent: 8px;
+    width: 200px;
+    outline: none;
+    transition: 0.25s;
+}
+
+input[type="text"]:hover,
+input[type="password"]:hover,
+input[type="number"]:hover,
+input[type="date"]:hover,
+input[type="time"]:hover,
+input[type="datetime-local"]:hover,
+input[type="file"]:hover,
+input[type="image"]:hover,
+input[type="tel"]:hover,
+input[type="search"]:hover,
+input[type="week"]:hover,
+input[type="month"]:hover,
+input[type="url"]:hover,
+select:hover,
+textarea:hover {
+     border-color: rgba(0, 0, 0, 0.3);
 }
